# ppo

./: .gitignore  README.md  pyproject.toml
configs/: a2_mujoco.yaml  cartpole_mujoco.yaml  mujoco_cartpole.yaml  mujoco_cartpole_balance.yaml
scripts/: cartpole_lqr_playback.py  cartpole_ppo_playback.py
src/gobot_ppo/: __init__.py  config.py  env.py  eval.py  lqr.py  mujoco_cartpole.py  runner.py  train.py
